# ai-thesis-automation-platform

./: .dockerignore  .gitattributes  .gitignore  README.md  handoff.md  nstl_index.html  nstl_index_js.js  nstl_paper_nav.js
ingest-cli/: README.md  pyproject.toml
ingest-cli/contracts/v0.1/: artifact-ingest-record.schema.json  contract-lock.json  engineering-result.schema.json  ingest-manifest.schema.json  source-mount.schema.json
ingest-cli/examples/controlled-small-sample/: README.md  ingest-config.example.json
ingest-cli/rules/v0.1/: artifact-classification.json  candidate-scoring.json  ingest-rules.json  rule-lock.json
ingest-cli/src/thesis_ingest/: __init__.py  __main__.py  candidates.py  canonical_json.py  checkpoint.py  classification.py  cli.py  config.py  contracts.py  deduplication.py  discovery.py  engineering.py  hashing.py  issues.py  output.py  paths.py  pipeline.py  preflight.py  references.py  sensitivity.py  verification.py
ingest-cli/tests/: __init__.py  support.py
ingest-cli/tests/contract/: test_contract_snapshot.py  test_engineering_result.py
ingest-cli/tests/fixtures/: __init__.py  build_controlled_sample.py
ingest-cli/tests/integration/: test_cli.py  test_controlled_fixture.py  test_output_verify.py  test_pipeline.py  test_root_migration.py  test_verification_references.py
ingest-cli/tests/unit/: test_candidates.py  test_canonical_json.py  test_checkpoint.py  test_classification.py  test_config.py  test_deduplication.py  test_discovery.py  test_hashing.py  test_package_cli.py  test_paths.py  test_preflight.py  test_references.py  test_sensitivity.py
platform/: .env.example
platform/backend/: Dockerfile  Dockerfile.test  pyproject.toml
(+303 files in other folders)
