[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-ingest"
version = "0.1.0"
description = "Offline reference implementation for thesis material ingestion governance"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.23,<5"]

[project.optional-dependencies]
test = ["pytest>=8.3,<10"]

[project.scripts]
thesis-ingest = "thesis_ingest.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "recovery: checkpoint, interruption, resume, and source-mutation scenarios",
  "security: negative path, executable, credential, dependency, and isolation scenarios",
]
