[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-platform-backend"
version = "0.1.0"
description = "P1-1 modular platform foundation and material ingest workflow"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "redis>=5.2,<7",
  "sqlalchemy>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=9,<10",
  "pytest-cov>=6,<8",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "postgres: requires a real PostgreSQL database",
  "redis: requires a real Redis server",
  "integration: process or service integration",
]
